# plotjuggler-release

./: .appveyor.yml  .clang-format  .gitmodules  .travis.yml  CHANGELOG.rst  CMakeLists.txt  COMPILE.md  Dockerfile  LICENSE  LICENSE.md  PlotJuggler.desktop  PlotJugglerConfig.cmake.in  Plotjuggler.rc  README.md  _config.yml  appimage_howto.md  conanfile.txt  contributors.txt  debian.store  mkdocs.yml  package.xml  patches.conf  plotjugglerConfig.cmake.in  releaser_history.json  requirements.txt  rpm.store  splash.xcf  tracks.yaml  vcpkg.json  win32build.bat
plotjuggler_app/: CMakeLists.txt  aboutdialog.ui  changelog_dialog.ui  color_map.cpp  color_map.h  colormap_editor.cpp  colormap_editor.h  colormap_editor.ui  colormap_selector.cpp  colormap_selector.h  colormap_selector.ui  curvelist_panel.cpp  curvelist_panel.h  curvelist_panel.ui  curvelist_view.cpp  curvelist_view.h  curvetree_view.cpp  curvetree_view.h  customtracker.cpp  customtracker.h  dummy_data.cpp  dummy_data.h  main.cpp  mainwindow.cpp  mainwindow.cpp.orig  mainwindow.h  mainwindow.ui  menubar.cpp  menubar.h  messageparser_base.cpp  multifile_prefix.cpp  multifile_prefix.h  multifile_prefix.ui  new_release_dialog.cpp  new_release_dialog.h  new_release_dialog.ui  nlohmann_parsers.cpp  nlohmann_parsers.h  plot_background.cpp  plot_background.h  (+37 more)
plotjuggler_app/cheatsheet/: cheatsheet_dialog.cpp  cheatsheet_dialog.h  cheatsheet_dialog.ui
plotjuggler_app/resources/: default.snippets.xml  stylesheet_dark.qss  stylesheet_light.qss
plotjuggler_app/transforms/: absolute_transform.cpp  absolute_transform.h  custom_function.cpp  custom_function.h  custom_timeseries.cpp  custom_timeseries.h  first_derivative.cpp  first_derivative.h  first_derivative.ui  function_editor.cpp  function_editor.h  function_editor.ui  integral_transform.cpp  integral_transform.h  integral_transform.ui  lua_custom_function.cpp  lua_custom_function.h  moving_average_filter.cpp  moving_average_filter.h  moving_average_filter.ui  moving_rms.cpp  moving_rms.h  moving_variance.cpp  moving_variance.h  moving_variance.ui  outlier_removal.cpp  outlier_removal.h  outlier_removal.ui  samples_count.cpp  samples_count.h  samples_count.ui  scale_transform.cpp  scale_transform.h  scale_transform.ui
plotjuggler_base/: CMakeLists.txt
plotjuggler_base/src/: datastreamer_base.cpp  lua_highlighter.cpp  plotdata.cpp  plotlegend.cpp  plotlegend.h  plotmagnifier.cpp  plotmagnifier.h  plotpanner.cpp  plotpanner.h  plotwidget_base.cpp  plotzoomer.cpp  plotzoomer.h  reactive_function.cpp  special_messages.cpp  timeseries_qwt.cpp  timeseries_qwt.h  transform_function.cpp
plotjuggler_plugins/DataLoadCSV/: CMakeLists.txt  dataload_csv.cpp  dataload_csv.h  dataload_csv.ui  datetimehelp.cpp  datetimehelp.h  datetimehelp.ui
plotjuggler_plugins/DataLoadMCAP/: CMakeLists.txt  dataload_mcap.cpp  dataload_mcap.h  dataload_params.h  dialog_mcap.cpp  dialog_mcap.h  dialog_mcap.ui  mcap.cpp
plotjuggler_plugins/DataLoadParquet/: CMakeLists.txt  dataload_parquet.cpp  dataload_parquet.h  dataload_parquet.ui
plotjuggler_plugins/DataLoadULog/: CMakeLists.txt  dataload_ulog.cpp  dataload_ulog.h  string_view.hpp  ulog_messages.h  ulog_parameters_dialog.cpp  ulog_parameters_dialog.h  ulog_parser.cpp  ulog_parser.h
plotjuggler_plugins/DataStreamLSL/: CMakeLists.txt
plotjuggler_plugins/DataStreamMQTT/: CMakeLists.txt  datastream_mqtt.cpp  datastream_mqtt.h  datastream_mqtt.ui  math.proto  math_pb2.py  mosquitto_config.h  mqtt_client.cpp  mqtt_client.h  mqtt_dialog.cpp  mqtt_dialog.h  mqtt_test_proto.py  robot_state.proto  robot_state_pb2.py
plotjuggler_plugins/DataStreamSample/: CMakeLists.txt  datastream_sample.cpp  datastream_sample.h
plotjuggler_plugins/DataStreamUDP/: CMakeLists.txt  udp_client.py  udp_server.cpp  udp_server.h  udp_server.ui
plotjuggler_plugins/DataStreamWebsocket/: CMakeLists.txt  websocket_client.py  websocket_server.cpp  websocket_server.h  websocket_server.ui
plotjuggler_plugins/DataStreamZMQ/: CMakeLists.txt  datastream_zmq.cpp  datastream_zmq.h  datastream_zmq.ui  zmq.hpp
plotjuggler_plugins/ParserDataTamer/: CMakeLists.txt  datatamer_parser.cpp  datatamer_parser.h
plotjuggler_plugins/ParserProtobuf/: CMakeLists.txt  error_collectors.cpp  error_collectors.h  protobuf_factory.cpp  protobuf_factory.h  protobuf_parser.cpp  protobuf_parser.h  protobuf_parser.ui
plotjuggler_plugins/ParserROS/: CMakeLists.txt  ros1_parser.h  ros2_parser.h  ros_parser.cpp  ros_parser.h  special_messages.cpp  special_messages.h
plotjuggler_plugins/PluginsZcm/: CMakeLists.txt  config_zcm.cpp  config_zcm.h  config_zcm.ui  dataload_zcm.cpp  dataload_zcm.h  dataload_zcm.ui  datastream_zcm.cpp  datastream_zcm.h  datastream_zcm.ui
plotjuggler_plugins/StatePublisherCSV/: CMakeLists.txt  publisher_csv.cpp  publisher_csv.h  publisher_csv_dialog.ui
plotjuggler_plugins/ToolboxFFT/: CMakeLists.txt  toolbox_FFT.cpp  toolbox_FFT.h  toolbox_FFT.ui
plotjuggler_plugins/ToolboxLuaEditor/: CMakeLists.txt  lua_editor.cpp  lua_editor.h  lua_editor.ui
plotjuggler_plugins/ToolboxQuaternion/: CMakeLists.txt  quaternion_to_rpy.cpp  quaternion_to_rpy.h  quaternion_to_rpy.ui  toolbox_quaternion.cpp  toolbox_quaternion.h
plotjuggler_plugins/VideoViewer/: CMakeLists.txt  qoi.h  video_dialog.cpp  video_dialog.h  video_dialog.ui  video_viewer.cpp  (+1 more)
plotter_gui/: CMakeLists.txt  aboutdialog.cpp  aboutdialog.ui  axis_limits_dialog.h  axis_limits_dialog.ui  cheatsheet_dialog.ui  curvecolorpick.cpp  curvecolorpick.h  curvecolorpick.ui  curvelist_panel.cpp  curvelist_panel.h  curvelist_panel.ui  curvelist_view.cpp  curvelist_view.h  curvetree_view.cpp  curvetree_view.h  customtracker.cpp  customtracker.h  filterablelistwidget.cpp  filterablelistwidget.h  filterablelistwidget.ui  help_dialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  menubar.cpp  menubar.h  new_release_dialog.cpp  new_release_dialog.h  new_release_dialog.ui  plotdata_qwt.cpp  plotdata_qwt.h  plotlegend.cpp  plotlegend.h  plotmagnifier.cpp  plotmagnifier.h  plotmatrix.cpp  plotmatrix.h  plotwidget.cpp  (+27 more)
(+350 files in other folders)
