<?xml version="1.0"?>
<package format="3">
    <name>plotjuggler</name>
    <version>3.1.0</version>
    <description>PlotJuggler: juggle with data</description>

    <maintainer email="davide.faconti@gmail.com">Davide Faconti</maintainer>
    <license>LGPLv3</license>

    <url type="website">https://github.com/facontidavide/PlotJuggler</url>

    <author email="davide.faconti@gmail.com">Davide Faconti</author>

    <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>
    <buildtool_depend condition="$ROS_VERSION == 2">ament_cmake</buildtool_depend>

    <depend  condition="$ROS_VERSION == 1">roslib</depend>
    <depend  condition="$ROS_VERSION == 2">ament_index_cpp</depend>

    <!-- common dependancies -->
    <depend>qtbase5-dev</depend>
    <depend>libqt5-svg-dev</depend>
    <depend>libqt5-websockets-dev</depend>
    <depend>libqt5-opengl-dev</depend>
    <depend>libqt5x11extras5-dev</depend>
    <depend>binutils</depend>
    <depend>boost</depend>
    <depend>libzmq3-dev</depend>


    <!-- The export tag contains other, unspecified, tags -->
    <export>
        <build_type condition="$ROS_VERSION == 1">catkin</build_type>
        <build_type condition="$ROS_VERSION == 2">ament_cmake</build_type>
    </export>
</package>
